# DDLBX

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: blank.yml  ci.yml
compiler/: CMakeLists.txt  README.md  build.sh  ddlbx.cc  ddlbx.sh  parser.y  token.l
compiler/core/: CMakeLists.txt  IO.cc  build_in.cc  float.cc  int.cc  list.ddlbx  ptr.ddlbx  str.cc
compiler/include/: grammer.hpp  selector.hpp
compiler/include/ir/: block.hpp  code_gen_context.hpp  code_genner.hpp  expression.hpp  function.hpp  function_handler.hpp  node.hpp  object.hpp  object_handler.hpp  statement.hpp  type.hpp  value.hpp
compiler/include/parser/: grammar.hpp  grammer.hpp  parser.hpp  selector.hpp
compiler/include/pass/: object_genner.hpp
compiler/include/utils/: logger.hpp  scope_guard.hpp
compiler/src/: ast.hpp  grammer.hpp  grammerCP.hpp  testParse.hpp
compiler/src/ir/: block.cc  code_gen_context.cc  code_genner.cc  expression.cc  function.cc  function_handler.cc  node.cc  object.cc  object_handler.cc  statement.cc  type.cc  value.cc
compiler/src/parser/: parser.cc  token.cc
compiler/src/pass/: object_genner.cc
compiler/src/utils/: logger.cc
compiler/test/: code_genner.cc  ddlbx_test.cc
compiler/test/ir/: code_genner.cc  function_test.hpp  value_test.hpp  variable_declaration_test.hpp
compiler/test/parser/: block.cc  block.hpp  boolean.hpp  call.cc  call.hpp  conditional.cc  declaration.cc  declaration.hpp  end.cc  end.hpp  expression.cc  expression.hpp  function.cc  function.hpp  identifier.cc  identifier.hpp  loop.cc  number.hpp  object.cc  operator.cc  operator.hpp  parameter.cc  parameter.hpp  return.cc  return.hpp  right_expression.hpp  statement.cc  statement.hpp  string.hpp  type.cc  type.hpp  value.cc  value.hpp
core/: build_in.cpp  build_in.hpp
docs/: BNF.md  grammer.ebnf  syntex.md
docs/examples/: fabnacci.ddlbx  fibonacci.ddlbx  floating_compute.ddlbx  hello_world.ddlbx  loop.ddlbx  method.ddlbx  polymorphism.ddlbx  simple_object.ddlbx  simple_stmt.ddlbx  template.ddlbx  trait.ddlbx
vsc-extension/ddlbx/: CHANGELOG.md  README.md  language-specific.ts  package-lock.json  package.json  vsc-extension-quickstart.md
vsc-extension/ddlbx/css/: high_light.css
vsc-extension/ddlbx/src/: extension.ts  language-specific.ts
vsc-extension/ddlbx/syntaxes/: DDLBX.tmLanguage.json
